--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
                     <div class="links">
                     <li></p><a href="Home Page.html">HOME</a></li>
                     <li><a href="character.html">AGENTS</a></li>
-                    <li><a href="learnmore.html>">LEARN</a></li>
                 </div>
                 </ul>
             </nav>
             <div class="content">
                 <h1>Valotech</h1>
-                <a href="LearnMore.html">Learn More</a>
+                <a href="learnmore.html">Learn More</a>
             </div>
 
         </div>
