--- a/learnmore.html
+++ b/learnmore.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="LearnMore.css">
     <title>Valorant</title>
-    <link rel="stylesheet" href="LearnMore.css" />
   </head>
   <body>
 
@@ -13,7 +11,6 @@
             <div class="links">
             <li></p><a href="Home Page.html">HOME</a></li>
             <li><a href="character.html">AGENTS</a></li>
-            <li><a href="learnmore.html">LEARN MORE</a></li>
         </div>
         </ul>
     </nav>
